tests/good/shadowing_static_binding.lt
void main() {
    int a = 0;
    print(a);
    {
        int a = 1;
        print(a);
    }
    print(a);

}