tests/bad/static_typing4.lt
void f(int a, int b) {
    print(a);
    print(b);
}
void main(){
    f(1, 2, 3, 4);
}